@@ -91,15 +91,22 @@ Here is the full set of configuration values for both classes, as well as their 
       # match will NOT send notification emails (e.g. for filtering out crazy
       # browsers).
       # array of hashes, each with one key (http header string) and a value
-      # (regexp to match in http header string)
+      # (regexp to match in http header string). this allows for more than one
+      # regexp to be specified for the same header if that's more convenient.
+      # any one pattern match will block notification.
+      # note that this looks in all request headers, including query params
+      # (e.g. form fields, url query params)
       :block_notify_on_request_headers => [],
       # configure whether to send emails synchronously or asynchronously
       # using delayed_job (these can be true even if delayed job is not
       # installed, in which case, will just send emails synchronously anyway)
-      :delayed_job_for_controller_errors => false,
-      :delayed_job_for_non_controller_errors => false,
+      :delayed_job_for_controller_errors => true,
+      :delayed_job_for_non_controller_errors => true,
       # mappings from exception classes to http status codes (see above)
       # add/remove from this list as desired in environment configuration
+      # note that the keys are String names of the classes, not the class
+      # constants themselves
+      # (e.g. "StandardError" => "500",    and _NOT_ StandardError => "500")
       :error_class_status_codes => Wrangler::codes_for_exception_classes,
       # explicitly indicate which exceptions to send email notifications for
       :notify_exception_classes => %w(),
@@ -108,13 +115,21 @@ Here is the full set of configuration values for both classes, as well as their 
       # where to look for app-specific error page templates (ones you create
       # yourself, for example...there are some defaults in this gem you can
       # use as well...and that are configured already by default)
-      :error_template_dir => File.join(RAILS_ROOT, 'app', 'views', 'error'),
-      # excplicit mappings from exception class to arbitrary error page
+      :error_template_dir => (defined?(RAILS_ROOT) ? File.join(RAILS_ROOT, 'app', 'views', 'error') : nil),
+      # explicit mappings from exception class to arbitrary error page
       # templates, different set for html and js responses (Wrangler determines
       # which to use automatically, so you can have an entry in both
       # hashes for the same error class)
+      # note that the keys are String names of the classes, not the class
+      # constants themselves
+      # (e.g. "StandardError" => "file",    and _NOT_ StandardError => "file")
       :error_class_html_templates => {},
       :error_class_js_templates => {},
+      # you can specify options to pass to the render() call when rendering
+      # error page for errors. This is applied globally, so plan accordingly
+      # (one good option is to pass in :layout => 'my_layout' so your app
+      # layout gets applied to the error templates)
+      :render_error_options => {},
       # you can specify a fallback failsafe error template to render if
       # no appropriate template is found in the usual places (you shouldn't
       # rely on this, and error messages will be logged if this template is
@@ -130,8 +145,20 @@ Here is the full set of configuration values for both classes, as well as their 
       # regexp-style
 
       # just DON'T change this! this is the error template of last resort!
+      # if you do change this, you really should have a good reason for it and
+      # really know what you're doing. really.
       :absolute_last_resort_default_error_template =>
-        File.join(WRANGLER_ROOT,'rails','app','views','wrangler','500.html')
+        File.join(WRANGLER_ROOT,'rails','app','views','wrangler','500.html'),
+      # allows for inserting additional data/comments/status/environment into
+      # the notification emails. possibilities include fetching the release number,
+      # patch info, current state of different services....
+      # pass a proc instance that accepts a single
+      # argument, the request object (if any).
+      # (e.g. +Proc.new { |request| puts "request is: #{request}" }+, but don't
+      # do that, that would be redundant, silly and not secure).
+      # NOTE: +request+ can be nil (if background process, for example), so
+      # implement accordingly
+      :call_for_supplementary_info => nil
 
 #####################
 # ExceptionNotifier:
